# poliglot

./: .gitignore  La_Junta_Directiva_IRC_Docs.md  Poliglot_ Actividad ejercicios en Python(1-1).xlsx  README.md  abstracción.md  actividadExcel.xlsx  db.py  documentacion-proceso.md  example.py  extract_python_files.py  genderize.py  investigacion_algoritmos.md  keywords.txt  main.py  output.txt  pyproject.toml  result.txt  statement.txt
analyze/: excel.py  pdf.py
dataframe pandas/: 1.xlsx  2.xlsx  3.xlsx  4.xlsx  Clasificación_y_métricas de soluciones.xlsx  Evaluacion_rondas_consensuado.xlsx  Lista_ejercicio_nombre_carnet.xlsx  Mapeo_estudiantes_anonimizado.csv  a.xlsx  generar_dataframe_todos_ejercicios.py  metricas_completas.csv  metricas_completas.xlsx  mix_sheets.py
docs/: documentacion-proceso.md  ejercicios_anonimizados.md
metrics/: idc.py  procesador.py  result.txt  sustEj.py
poliglot/: main.py
poliglot/analyze/: excel.py  pdf.py
poliglot/docs/: documentacion-automatica.md  documentacion-proceso.md  ejercicios_anonimizados.md
poliglot/metrics/: coherence.py  idc.py  inn.py  irc.py  radon.py  result.txt
poliglot/stored_procedures/: delete_consult_test.sql  insert_aspect.sql  insert_solution.sql  insert_student.sql
poliglot/upload/: drive.py
poliglot/utils/: contar_hojas.py  extract_python_files.py
stored_procedures/: bd.sql  delete_consult_test.sql  insert_exercise.sql  insert_group.sql  insert_solution.sql  insert_student.sql
upload/: drive.py
